--- a/dev.html
+++ b/dev.html
@@ -365,8 +365,8 @@
   }
 
 
-  /* Photo background swatch button (camera) */
-  .bg-swatch.photo{
+  /* Photo background swatch button */
+  .bgSwatch.photo{
     display:flex;
     align-items:center;
     justify-content:center;
@@ -374,19 +374,8 @@
     line-height:1;
     border-style:dashed;
     border-width:1px;
-    background: rgba(0,0,0,0.08);
   }
-  .bg-swatch.photo::after{ content:"📷"; }
-  .photo-wrap{ position:relative; width:26px; height:26px; flex:0 0 auto; }
-  .photo-wrap .bg-swatch{ width:26px; height:26px; }
-  .photo-input{
-    position:absolute;
-    inset:0;
-    width:100%;
-    height:100%;
-    opacity:0;
-    cursor:pointer;
-  }
+  .bgSwatch.photo::after{ content:""; }
   .photoBgActive .bg-palette-wrap{ backdrop-filter: blur(2px); }
 
 
@@ -420,25 +409,19 @@
   }
 
 
-
-  .version{font-size:12px;opacity:.75;margin-left:8px;white-space:nowrap;}
-
-  .photo-input{position:absolute;inset:0;width:100%;height:100%;opacity:0;cursor:pointer;}
-
-    .bg-upload{
-      display:inline-flex; align-items:center; justify-content:center;
-      width:44px; height:32px; border-radius:12px;
-      border:1px solid rgba(255,255,255,.18);
-      background:rgba(255,255,255,.06);
-      color:rgba(255,255,255,.92);
-      font-size:18px;
-      user-select:none;
-      -webkit-tap-highlight-color: transparent;
-      cursor:pointer;
-    }
-    .bg-upload:active{ transform: translateY(1px); }
-
+  /* Upload icon button */
+  .bgSwatch.upload {
+    display:flex;
+    align-items:center;
+    justify-content:center;
+  }
+  .bgSwatch.upload svg{
+    width:16px; height:16px;
+    fill: currentColor;
+    opacity:0.9;
+  }
 </style>
+
 </head>
 
 <body>
@@ -452,7 +435,6 @@
 <button id="endBtn" title="End game and show score">End Game</button>
 
     <div id="level">N = 2</div>
-    <div id="versionBadge" class="version">DEV v32</div>
 
     <div class="bg-palette-wrap" aria-label="Background">
       <span class="bg-label">Background</span>
@@ -488,7 +470,7 @@
     <div id="arena"></div>
     <svg id="linesLayer" aria-hidden="true"></svg>
 
-    <div id="overlay" role="dialog" aria-modal="true" style="display:none">
+    <div id="overlay" role="dialog" aria-modal="true">
       <div id="panel">
         <h2>Final Score</h2>
         <div id="score">N = 2</div>
@@ -498,16 +480,14 @@
         </p>
         <div class="row">
           <button id="restartFromOverlay">Play Again</button>
-          </div>
+          
+        </div>
       </div>
     </div>
 
   </div>
 </div>
 
-<script>
-(() => {
-  const game   = document.getElementById("g
 <script>
 (() => {
   const game   = document.getElementById("game");
@@ -633,9 +613,7 @@ const endBtn = document.getElementById("endBtn");
   const overlay = document.getElementById("overlay");
   const scoreEl = document.getElementById("score");
   const restartFromOverlay = document.getElementById("restartFromOverlay");
-  const closeFromOverlay = document.getElementById("closeFromOverlay");
-
-  const linesLayer = document.getElementById("linesLayer");
+const linesLayer = document.getElementById("linesLayer");
 
   function clearLines(){
     while (linesLayer.firstChild) linesLayer.removeChild(linesLayer.firstChild);
@@ -809,64 +787,8 @@ const endBtn = document.getElementById("endBtn");
 
   // Module: renders swatches and manages selection state
   
-  // ---- 
-
-function initBackgroundPalette(opts){
-    const {
-      containerId = "bgPalette",
-      defaultKey = "deepBlue",
-      storageKey = "smt_bg_theme",
-      onChange = () => {}
-    } = (opts || {});
-
-    const container = document.getElementById(containerId);
-    if(!container) return { setTheme: applyBackgroundTheme };
-
-    const keys = Object.keys(BACKGROUND_THEMES);
-
-    function setSelected(key){
-      [...container.querySelectorAll(".bg-swatch")].forEach(el=>{
-        el.setAttribute("aria-selected", el.dataset.key === key ? "true" : "false");
-      });
-    }
-
-    function setTheme(key){
-      clearPhotoBackground();
-      applyBackgroundTheme(key);
-      setSelected(key);
-      try{ localStorage.setItem(storageKey, key); }catch(e){}
-      onChange(key);
-    }
-
-    // render
-    container.innerHTML = "";
-    keys.forEach((key)=>{
-      const t = BACKGROUND_THEMES[key];
-      const sw = document.createElement("button");
-      sw.type = "button";
-      sw.className = "bg-swatch";
-      sw.title = t.name;
-      sw.setAttribute("aria-selected", "false");
-      sw.dataset.key = key;
-      sw.style.background = t.swatch;
-      sw.addEventListener("click", ()=> setTheme(key));
-      container.appendChild(sw);
-    });
-
-    // initial selection (restore if possible)
-    let initial = defaultKey;
-    try{
-      const saved = localStorage.getItem(storageKey);
-      if(saved && BACKGROUND_THEMES[saved]) initial = saved;
-    }catch(e){}
-    setTheme(initial);
-    return { setTheme };
-  }
-
-  initBackgroundPalette({ defaultKey: "deepBlue" });
-  initTuning();
-
-  // ---------- Gold transition ----------
+  // ---- Photo background removed (disabled for now)
+// ---------- Gold transition ----------
   async function goldTransition(token){
     // Calm between-round cue: brief warm glow without flicker.
     if (token !== runToken) return;
@@ -939,258 +861,60 @@ game.classList.add("goldGlow");
   }
 
   function nonOverlappingPlacement(n) {
-    const ar = arenaRectInGameCoords();
+    const arena = arenaRectInGameCoords();
     const placed = [];
 
+    // rSpace is the effective radius we must respect so circles never overlap
+    // even when the user increases RECALL_RADIUS.
+    function ok(candidate) {
+      for (const p of placed) {
+        const dx = candidate.x - p.x;
+        const dy = candidate.y - p.y;
+        const d = Math.hypot(dx, dy);
+        if (d < (candidate.rSpace + p.rSpace + PADDING_BETWEEN)) return false;
+      }
+      return true;
+    }
+
     for (let i = 0; i < n; i++) {
-      let ok = false;
+      let found = null;
 
-      for (let tries = 0; tries < 350; tries++) {
+      for (let tries = 0; tries < 450; tries++) {
         const rShow = rand(SHOW_RADIUS_MIN, SHOW_RADIUS_MAX);
+        const rSpace = Math.max(rShow, RECALL_RADIUS);
 
-        // IMPORTANT: recall circles can be larger than show circles (Size tuning),
-        // so we place circles using an "effective" radius that guarantees no overlap
-        // at the largest possible displayed radius.
-        const rEff = Math.max(rShow, RECALL_RADIUS);
+        const x = rand(arena.left + rSpace, arena.left + arena.width - rSpace);
+        const y = rand(arena.top + rSpace, arena.top + arena.height - rSpace);
 
-        const cx = rand(ar.left + rEff, ar.left + ar.width  - rEff);
-        const cy = rand(ar.top  + rEff, ar.top  + ar.height - rEff);
-        const candidate = { cx, cy, rShow, rEff };
-
-        const tooClose = placed.some(p => dist(candidate, p) < (candidate.rEff + p.rEff + PADDING_BETWEEN));
-        if (!tooClose) {
-          ok = true;
-          placed.push({ cx, cy, rShow, rEff });
+        const candidate = { x, y, rShow, rSpace };
+        if (ok(candidate)) {
+          found = candidate;
           break;
         }
       }
 
-      if (!ok) {
+      if (!found) {
+        // Rare fallback: still keep within bounds.
         const rShow = rand(SHOW_RADIUS_MIN, SHOW_RADIUS_MAX);
-        const rEff  = Math.max(rShow, RECALL_RADIUS);
-        const cx = rand(ar.left + rEff, ar.left + ar.width  - rEff);
-        const cy = rand(ar.top  + rEff, ar.top  + ar.height - rEff);
-        placed.push({ cx, cy, rShow, rEff });
-      }
-    }
-    return placed;
-  }
-
-  async function runRound(token) {
-    // Reset misses at the start of each round
-    missesUsed = 0;
-    phase = "transition";
-    clearBoard();
-    syncLinesViewport();
-    setLevel();
-
-    setStatus("Get ready…");
-    await preRoundCue(token);
-    if (token !== runToken) return;
-
-    phase = "showing";
-    setStatus(`Watch the sequence… (${N})`);
-
-    circles = nonOverlappingPlacement(N).map((pos, i) => {
-      const color = palette[i % palette.length];
-      const freq  = NOTE_FREQS[i % NOTE_FREQS.length];
-      const wave  = WAVEFORMS[i % WAVEFORMS.length];
-      return { ...pos, index:i, color, freq, wave, el:null };
-    });
-
-    circles.forEach(c => {
-      makeCircleElement(c);
-      setCircleGeometry(c, c.rShow);
-      c.el.classList.remove("wrong","visible","glow");
-    });
-
-    for (let i=0; i<N; i++) {
-      if (token !== runToken) return;
-      const c = circles[i];
-
-      // Keep already-shown circles on-screen (dim), highlight current one.
-      for (let j=0; j<i; j++){
-        const p = circles[j];
-        p.el.classList.add("visible");
-        p.el.classList.remove("active");
-        p.el.classList.add("dim");
+        const rSpace = Math.max(rShow, RECALL_RADIUS);
+        const x = rand(arena.left + rSpace, arena.left + arena.width - rSpace);
+        const y = rand(arena.top + rSpace, arena.top + arena.height - rSpace);
+        found = { x, y, rShow, rSpace };
       }
 
-      // Draw the line from previous to current (center-to-center)
-      if (i > 0) drawLine(circles[i-1], c);
-
-      c.el.classList.add("visible");
-      c.el.classList.remove("dim");
-      c.el.classList.add("active");
-
-      playToneForIndex(c.index, Math.min(190, Math.floor(SHOW_MS*0.30)));
-      await sleep(SHOW_MS);
-
-      // After its turn, keep it on-screen but dimmed (no popping)
-      c.el.classList.remove("active");
-      c.el.classList.add("dim");
-
-      await sleep(GAP_MS);
+      placed.push(found);
     }
 
-    // NEW: erase lines before player starts clicking
-    clearLines();
-
-    // Calm transition: remove dim/active styling before recall layout
-    circles.forEach(c => {
-      c.el.classList.remove("active","dim");
-      // hide briefly to avoid size-teleport feeling
-      c.el.classList.remove("visible");
-    });
-    await sleep(120);
-
-    phase = "recall";
-    expectedIndex = 0;
-
-    circles.forEach(c => {
-      setCircleGeometry(c, RECALL_RADIUS);
-      c.el.classList.add("visible");
-    });
-
-    setStatus(`Your turn: click in order (1 → ${N}).`);
+    // Preserve previous API: callers expect {x,y,r} where r is the SHOW radius.
+    return placed.map(p => ({ x: p.x, y: p.y, r: p.rShow }));
   }
 
-  function handleClick(circleObj) {
-    const i = circleObj.index;
-
-    if (i === expectedIndex) {
-      playToneForIndex(circleObj.index, 135);
-
-      circleObj.el.classList.add("glow");
-      setTimeout(() => circleObj.el?.classList.remove("glow"), 160);
-
-      setTimeout(() => circleObj.el?.remove(), 40);
-
-      expectedIndex++;
-      if (expectedIndex >= N) onSuccess();
-      else setStatus(`Good! Next: ${expectedIndex + 1} of ${N}.`);
-    } else {
-      // Wrong click: allow up to MISS_LIMIT misses per round (do not end immediately)
-      playFail();
-      missesUsed = Math.min(MISS_LIMIT, missesUsed + 1);
-      circleObj.el.classList.add("wrong");
-      setTimeout(() => circleObj.el?.classList.remove("wrong"), 260);
-
-      const remaining = MISS_LIMIT - missesUsed;
-      if (remaining > 0) {
-        setStatus(`Almost! Try again — ${remaining} miss${remaining===1?"":"es"} left this round.`);
-        return; // keep playing this round
-      } else {
-        setStatus(`Out of chances this round.`);
-        onFailure();
-      }
-    }
-  }
-
-  async function onSuccess() {
-    phase = "transition";
-    maxNThisSession = Math.max(maxNThisSession, N);
-    setStatus(`✅ Success! Next round…`);
-    await goldTransition(runToken);
-    N = clamp(N + 1, MIN_N, MAX_N);
-    await sleep(BETWEEN_ROUNDS_MS);
-    if (phase !== "transition") return;
-    await runRound(runToken);
-  }
-
-  async function onFailure() {
-    phase = "transition";
-    maxNThisSession = Math.max(maxNThisSession, N);
-    setStatus(`❌ Wrong order. Adjusting…`);
-    await goldTransition(runToken);
-    N = clamp(N - 1, MIN_N, MAX_N);
-    await sleep(BETWEEN_ROUNDS_MS);
-    if (phase !== "transition") return;
-    await runRound(runToken);
-  }
-
-  function showFinalScore(){
-    phase = "ended";
-    clearBoard();
-    scoreEl.textContent = `N = ${maxNThisSession}`;
-    overlay.classList.add("show");
-    setStatus("Game ended.");
-    levelEl.textContent = `N = ${N}`;
-  }
-
-  function attemptClose(){
-    try { window.close(); } catch(e) {}
-  }
-
-  function showFinalScoreInline(){
-    // Minimal, non-blocking end-of-game message (no modal)
-    try{
-      const msg = document.getElementById("message");
-      if(msg){
-        msg.textContent = `Final score: N = ${bestN}. Tap Play to try again.`;
-      }
-    }catch(e){}
-    // Always hide overlay if it exists
-    const ov = document.getElementById("overlay");
-    if(ov) ov.style.display = "none";
-  }
-
-  function endGame(){
-    runToken++;
-    showFinalScore();
-  }
-
-  endBtn.addEventListener("click", () => {
-    ensureAudio();
-    endGame();
-  });
-
-  closeBtn.addEventListener("click", () => {
-    ensureAudio();
-    endGame();
-  });
-
-  if (closeFromOverlay) closeFromOverlay.addEventListener("click", () => {
-    attemptClose();
-  });
-
-  restartFromOverlay.addEventListener("click", () => {
-    overlay.classList.remove("show");
-    startGame();
-  });
-
-  function startGame(){
-    ensureAudio();
-    lockViewport();
-    runToken++;
-    phase = "idle";
-    N = 2;
-    maxNThisSession = 2;
-    setLevel();
-    clearBoard();
-    setStatus("Starting…");
-    sleep(120).then(async () => { await goldTransition(runToken); await runRound(runToken); });
-}
 
   startBtn.addEventListener("click", () => startGame());
 
 })();
 
-  // DEBUG: show a tiny dot when JS has loaded
-  (function(){
-    const d=document.createElement('div');
-    d.style.cssText='position:fixed;right:6px;bottom:6px;width:8px;height:8px;border-radius:999px;background:rgba(0,255,120,.8);z-index:99;';
-    d.title='JS loaded';
-    document.body.appendChild(d);
-    setTimeout(()=>{d.remove();}, 2500);
-  })();
-
-    // Shuffle circle colors each round so color doesn't become an order cue
-    const palette = [...COLOR_PALETTE];
-    for (let k = palette.length - 1; k > 0; k--) {
-      const j = Math.floor(Math.random() * (k + 1));
-      [palette[k], palette[j]] = [palette[j], palette[k]];
-    }
-
-
-
+  renderMisses();
+</script>
+</body>
+</html>
